# Amzn-Price-Tracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs
python/conf/: amzn.toml
python/pyproto/: messages_pb2.py  messages_pb2.pyi
python/triggers/: amzn_http_trigger.py  amzn_trigger.py  pyproto
src/: amzn.rs  functions.rs  main.rs  structs.rs
src/proto/: messages.proto
