[package]
name = "rust-price-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
base64 = "0.21.2"
futures = "0.3.28"
prost = "0.11.9"
reqwest = "0.11.17"
scraper = "0.16.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }

[build-dependencies]
prost-build = "0.11.9"
